--- a/mandel.html
+++ b/mandel.html
@@ -6,7 +6,7 @@
 <script>
 
 //configurable
-var framerate = 1;
+var framerate = 10;
 var pxlsz = 2;
 
 var xmin = 0.27085;
@@ -18,25 +18,21 @@ var maxiter = 256;
 //-0.743643887037158704752191506114774, 0.131825904205311970493132056385139
 //and magnification 1 .. 3.18 × 1031
 
-var xmin = -2;
-var xmax = 1;
-var ymin = -0.75;
-var ymax = 0.75;
 var maxiter = 500;
 
 var cx = -0.743643887037158704752191506114774;
 var cy = 0.131825904205311970493132056385139;
 var zoom = 1;
 
+var xmin = -2 + cx;
+var xmax = 1 + cx;
+var ymin = -0.75 + cy;
+var ymax = 0.75 + cy;
+
 //internal
 var __canvas, __canvas_context;
 var __scrw, __scrh;
-
-//var scrx = 0;
-//var scry = 0;
-
-var dx=(xmax-xmin)/__scrw;
-var dy=(ymax-ymin)/__scrh;
+var dx, dy;
 
 function putpxl(x, y, col) {
 	__canvas_context.fillStyle= 'rgba('+col+')';
@@ -82,52 +78,52 @@ var colors = [
 
 function main_loop() {
 	for(var scry = 0; scry<__scrh; scry++) {
-	for(var scrx = 0; scrx<__scrw; scrx++) {
+		for(var scrx = 0; scrx<__scrw; scrx++) {
+			var x = xmin + dx*scrx;
+			var y = ymin + dy*scry;
 	
-	var x = xmin + dx*scrx;
-	var y = ymin + dy*scry;
+			var u = 0;
+			var v = 0;
+			var u2 = 0;
+			var v2 = 0;
 	
-	var u = 0;
-	var v = 0;
-	var u2 = 0;
-	var v2 = 0;
+			var k = 1;
 	
-	var k = 1;
+			for (; k < maxiter && (u2 + v2 < 4.0); k++) {
+				v = 2 * u * v + y;
+				u = u2 - v2 + x;
+				u2 = u * u;
+				v2 = v * v;
+			}
 	
-	for (; k < maxiter && (u2 + v2 < 4.0); k++) {
-		v = 2 * u * v + y;
-		u = u2 - v2 + x;
-		u2 = u * u;
-		v2 = v * v;
-	}
-	
-	if (k >= maxiter)
-		putpxl(scrx, scry, "0,0,0,255");
-	else
-		putpxl(scrx, scry, colors[k%16]);
-	
-	/*scrx++;
-	if(scrx>=__scrw) {
-		scrx=0;
-		
-		scry++;
-		if(scry>=__scrh) {
-			scry = 0;
-			
-			//TODO zoom into the set
-			return;
+			if (k >= maxiter)
+				putpxl(scrx, scry, "0,0,0,255");
+			else
+				putpxl(scrx, scry, colors[k%16]);
 		}
-	}*/
-	
-	}}
+	}
 	
 	xmin /= 1.1;
 	xmax /= 1.1;
 	ymin /= 1.1;
 	ymax /= 1.1;
-	//main_loop();
-	//flip buffer
-	//__canvas_context.drawImage(__canvas_buffer, 0, 0);
+	
+	xmin = -2*zoom + cx;
+	xmax = 1*zoom + cx;
+	ymin = -0.75*zoom + cy;
+	ymax = 0.75*zoom + cy;
+	
+	zoom /= 1.1
+	
+	/*var xmin = cx - zoom;
+	var xmax = cx + zoom;
+	var ymin = cy - zoom;
+	var ymax = cy + zoom;*/
+	
+	dx=(xmax-xmin)/__scrw;
+	dy=(ymax-ymin)/__scrh;
+	
+	console.log(xmin);
 }
 
 </script>
