--- a/mandel.html
+++ b/mandel.html
@@ -5,24 +5,24 @@
 
 <script>
 
+/*
+
+[] zoom into area with most variability
+[] buttons to config params
+*/
+
 //configurable
-var framerate = 10;
-var pxlsz = 2;
-
-var xmin = 0.27085;
-var xmax = 0.27100;
-var ymin = 0.004640;
-var ymax = 0.004810;
-var maxiter = 256;
-
-//-0.743643887037158704752191506114774, 0.131825904205311970493132056385139
-//and magnification 1 .. 3.18 × 1031
+var framerate = 30;
+var pxlsz = 4;
+var zoom_start = 5;
+var zoom_factor = 1.02;
 
 var maxiter = 500;
 
+//starting center
 var cx = -0.743643887037158704752191506114774;
 var cy = 0.131825904205311970493132056385139;
-var zoom = 1;
+var zoom = zoom_start;
 
 var xmin = -2 + cx;
 var xmax = 1 + cx;
@@ -32,6 +32,7 @@ var ymax = 0.75 + cy;
 //internal
 var __canvas, __canvas_context;
 var __scrw, __scrh;
+var __scr_ratio = 0;
 var dx, dy;
 
 function putpxl(x, y, col) {
@@ -47,9 +48,17 @@ function init() {
 	
 	__scrw = __canvas.width/pxlsz;
 	__scrh = __canvas.height/pxlsz;
+	__scr_ratio = __scrw/__scrh;
+	
+	xmin = -__scr_ratio*zoom + cx;
+	xmax = __scr_ratio*zoom + cx;
+	ymin = -__scr_ratio*zoom + cy;
+	ymax = __scr_ratio*zoom + cy;
 	
 	dx=(xmax-xmin)/__scrw;
 	dy=(ymax-ymin)/__scrh;
+	
+	zoom = zoom_start;
 	
 	window.setInterval(function(){
 		main_loop();
@@ -103,27 +112,19 @@ function main_loop() {
 		}
 	}
 	
-	xmin /= 1.1;
-	xmax /= 1.1;
-	ymin /= 1.1;
-	ymax /= 1.1;
+	//TODO find area with most entropy
 	
-	xmin = -2*zoom + cx;
-	xmax = 1*zoom + cx;
-	ymin = -0.75*zoom + cy;
-	ymax = 0.75*zoom + cy;
+	zoom /= zoom_factor;
 	
-	zoom /= 1.1
-	
-	/*var xmin = cx - zoom;
-	var xmax = cx + zoom;
-	var ymin = cy - zoom;
-	var ymax = cy + zoom;*/
+	xmin = -__scr_ratio*zoom + cx;
+	xmax = __scr_ratio*zoom + cx;
+	ymin = -zoom + cy;
+	ymax = zoom + cy;
 	
 	dx=(xmax-xmin)/__scrw;
 	dy=(ymax-ymin)/__scrh;
 	
-	console.log(xmin);
+	//console.log(xmin);
 }
 
 </script>
@@ -133,5 +134,7 @@ function main_loop() {
 <body onload="init()">
 <canvas id="myCanvas" width="1000" height="500" >Your browser does not support the HTML5 canvas tag.</canvas>
 <div>
+<!-- color map, pause, click yo zoom -->
+</div>
 </body>
 </html>
